[package]
name = "ascend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.24.0"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" } 
bevy_editor_pls = "0.8.1"
bevy_rapier2d = "0.25.0"
leafwing-input-manager = "0.13.3"

[patch.crates-io]
# Patch unstable version to resolve conflicting dependencies from bevy_ecs_ldtk
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
